Feat: using token auth (#9)
* Work has started on the feat/using-token-auth

* feat: using devise_token_auth

* feat: update api docs
